Fixed - Horizontal Scroll Bar when width < ~1500px

--- a/themes/SuiteP/css/editview.scss
+++ b/themes/SuiteP/css/editview.scss
@@ -4966,10 +4966,7 @@ object {
     font-size: 1em;
   }
 
-  .content {
-    margin: 0 0 0 0;
-    width: 100%;
-  }
+
 
   #pageContainer {
     margin: 0 0 0 0;
